# goit-pythonweb-hw-10

./: README.md  main.py  pyproject.toml
alembic/: env.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/db/: connection.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  users.py
